--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@mui/styles": "^5.10.10",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,13 +17,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.1",
-    "node-sass": "^7.0.3",
+    "markdown-to-jsx": "^7.1.7",
+    "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "react-tooltip": "^4.4.2",
+    "sass": "^1.55.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
