--- a/server/config.env
+++ b/server/config.env
@@ -4,3 +4,4 @@ MONGODB_URL=mongodb+srv://samkam:JRRyb4ywChXjggbL@cluster0.dnuc6.mongodb.net/kyu
 EMAIL_SERVICE=smtp.mailtrap.io
 EMAIL_USER=ce1d3e01f582c5
 APP_PASSWORD=1951c204ad4f2
+SECRET=kyusda2022
