family pages added

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-swipeable-views-utils": "^0.14.0",
     "react-tooltip": "^4.4.2",
     "sass": "^1.55.0",
+    "styled-components": "^5.3.6",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
