--- a/server/config.env
+++ b/server/config.env
@@ -1,7 +1,7 @@
 PORT=8000
-MONGODB_PASSWORD=JRRyb4ywChXjggbL
-MONGODB_URL=mongodb+srv://samkam:JRRyb4ywChXjggbL@cluster0.dnuc6.mongodb.net/kyusda?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://samkam:MxHeaCAlR3OlBuk6@cluster0.dnuc6.mongodb.net/kyusda
 EMAIL_SERVICE=smtp.mailtrap.io
 EMAIL_USER=ce1d3e01f582c5
 APP_PASSWORD=1951c204ad4f2
 SECRET=kyusda2022
+# https://kyusdaapi.azurewebsites.net
