--- a/admin/package.json
+++ b/admin/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "recharts": "^2.4.3",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
