--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -26,6 +26,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: ./server
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -52,5 +53,5 @@ jobs:
         with:
           app-name: 'kyusdabackend'
           slot-name: 'Production'
-          package: .
+          package: ./node-app
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_22E4250F0561413EAEE18E686724BDCD }}
