--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -45,6 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: ./node-app
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
