--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -25,13 +25,13 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-        working-directory: ./server
+          npm run test --if-present
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./server
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +45,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: ./node-app
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
@@ -53,5 +52,5 @@ jobs:
         with:
           app-name: 'kyusdabackend'
           slot-name: 'Production'
-          package: ./node-app
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_22E4250F0561413EAEE18E686724BDCD }}
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2E5A6846D1E74DFE9F76627601E71873 }}
