--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -31,7 +31,12 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./server
+          # Ensure web.config is included in the artifact
+          path: |
+            ./server
+            ./server/web.config  # Include web.config file
+           
+          
 
   deploy:
     runs-on: ubuntu-latest
