--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+        working-directory: ./server
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: ./server/release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,7 +52,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip  ./server/release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -67,5 +67,5 @@ jobs:
         with:
           app-name: 'kyusdabackend'
           slot-name: 'Production'
-          package: .
+          package: ./server
           
