--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -28,7 +28,8 @@ jobs:
         working-directory: ./server
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r server.zip ./*
+        working-directory: ./server
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
