--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -53,7 +53,8 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip -o ./server
+        run: unzip -o server.zip
+        working-directory: ./server
       
       - name: Login to Azure
         uses: azure/login@v2
