--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -51,10 +51,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip -o server.zip
-        working-directory: ./server
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -69,5 +65,5 @@ jobs:
         with:
           app-name: 'kyusdabackend'
           slot-name: 'Production'
-          package: ./server
+          package: ./server/server.zip
           
