--- a/.github/workflows/main_kyusdabackend.yml
+++ b/.github/workflows/main_kyusdabackend.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./server
+          path: ./server/server.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -65,5 +65,5 @@ jobs:
         with:
           app-name: 'kyusdabackend'
           slot-name: 'Production'
-          package: ./server/server.zip
+          package: server.zip
           
