--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^6.1.7",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
@@ -20,6 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
