--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "react-spinners": "^0.15.0",
     "react-tooltip": "^4.4.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
