--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.1.3",
     "formik": "^2.4.6",
     "framer-motion": "^7.6.1",
+    "lucide-react": "^0.474.0",
     "markdown-to-jsx": "^7.1.7",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
