--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
+    "swiper": "^11.2.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
