--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.474.0",
     "markdown-to-jsx": "^7.1.7",
     "mdb-react-ui-kit": "^5.0.0",
