--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.474.0",
     "markdown-to-jsx": "^7.1.7",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-loading-skeleton": "^3.5.0",
     "react-phone-input-2": "^2.15.1",
