--- a/server/package.json
+++ b/server/package.json
@@ -2,28 +2,47 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "type": "module",
   "engines": {
     "node": ">=v18.16.0"
   },
   "scripts": {
-    "test": "echo \"No tests specified\"",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx --watch server.ts",
+    "build": "tsc"
   },
   "author": "samuel kamotho",
   "license": "ISC",
   "dependencies": {
     "@sanity/client": "^6.28.2",
+    "@types/ejs": "^3.1.5",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.7",
-    "nodemailer": "^6.8.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.10.38",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.10",
+    "@types/validator": "^13.12.2",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
