--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "swiper": "^11.2.2",
+    "toast": "^0.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
