feat: add sonner dependency for enhanced toast notifications

--- a/client/package.json
+++ b/client/package.json
@@ -37,9 +37,9 @@
     "react-tooltip": "^4.4.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
+    "sonner": "^2.0.1",
     "styled-components": "^5.3.6",
     "swiper": "^11.2.2",
-    "toast": "^0.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
