--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.7",
     "node-cron": "^3.0.3",
