feat: add "type" field to package.json to support ES modules

--- a/client/package.json
+++ b/client/package.json
@@ -82,5 +82,6 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "samuel kamotho",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
