--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.7",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
@@ -18,6 +19,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "dayjs": "^1.11.13",
+    "firebase": "^9.17.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.474.0",
@@ -37,11 +39,13 @@
     "react-scroll": "^1.8.8",
     "react-spinners": "^0.15.0",
     "react-tooltip": "^4.4.2",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
     "sonner": "^2.0.1",
     "styled-components": "^5.3.6",
     "swiper": "^11.2.2",
+    "timeago.js": "^4.0.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
