--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx --watch server.ts",
+    "dev": "tsx watch server.ts",
     "build": "tsc"
   },
   "author": "samuel kamotho",
