--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/x-data-grid": "^7.28.0",
@@ -25,7 +26,9 @@
     "lucide-react": "^0.474.0",
     "markdown-to-jsx": "^7.1.7",
     "mdb-react-ui-kit": "^5.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.4.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
@@ -76,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
