--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node src/index.js"
   },
   "author": "samuel kamotho",
   "license": "ISC",
