--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch server.ts",
     "build": "tsc",
-    "start": "node src/index.js"
+    "start": "tsx server.ts"
   },
+
   "author": "samuel kamotho",
   "license": "ISC",
   "dependencies": {
@@ -25,7 +26,7 @@
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "ioredis": "^5.6.0",
