--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.17.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.474.0",
     "markdown-to-jsx": "^7.1.7",
     "mdb-react-ui-kit": "^5.0.0",
