--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,14 +5,24 @@ FROM node:18
 WORKDIR /app
 
 # Copy package.json and install dependencies
-COPY package.json .
+COPY package.json package-lock.json* ./
 RUN npm install
+
+# Install TypeScript globally (if not in package.json)
+RUN npm install -g typescript
 
 # Copy the rest of the backend code
 COPY . .
 
-# Expose port 5000 (or whatever port your server uses)
-EXPOSE 5000
+# Compile TypeScript to JavaScript
+RUN npm run build  # Assumes you have a "build" script like "tsc"
 
-# Start the server
-CMD ["npm", "start"]
+# Debugging: Ensure `dist/` exists
+RUN ls -l dist/
+
+# Expose port 3000 (matches your server.ts)
+EXPOSE 8000
+
+# Start the compiled server
+# CMD ["node", "dist/server.js"]  # Adjust "dist/server.js" based on your tsconfig.json
+CMD ["sh", "-c", "node dist/server.js"]
