--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
-  "type": "module",
   "engines": {
     "node": ">=v18.16.0"
   },
@@ -11,9 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch server.ts",
     "build": "tsc",
-    "start": "tsx server.ts"
+    "start": "node dist/server.js"
   },
-
   "author": "samuel kamotho",
   "license": "ISC",
   "dependencies": {
@@ -47,9 +45,10 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.14",
     "@types/validator": "^13.12.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.13",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
