--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./",
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "types": ["node"]
   }, 
-    "include": ["."],
+    "include": ["**/*.ts"],
     "exclude": ["node_modules", "dist"]
 }
