--- a/backend_sanity/Dockerfile
+++ b/backend_sanity/Dockerfile
@@ -1,18 +1,18 @@
 # Use Node.js as the base
-FROM node:18
+FROM node:22-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json (if exists)
+# Copy package.json and install dependencies
 COPY package.json package-lock.json* ./
 RUN npm install
 
 # Copy the rest of the Sanity code
 COPY . .
 
-# Expose port 3333 (Sanity Studio’s default port)
+# Expose port 3333 (Sanity Studio dev server)
 EXPOSE 3333
 
-# Start Sanity Studio
-CMD ["npm", "run", "start"]
+# Start in development mode
+CMD ["npm", "run", "dev"]
