--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "node": ">=v18.16.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests yet\" && exit 0",
     "dev": "tsx watch server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
