--- a/.github/workflows/dev_kyusda-api.yml
+++ b/.github/workflows/dev_kyusda-api.yml
@@ -65,7 +65,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip -o release.zip
 
       - name: Login to Azure
         uses: azure/login@v2
