--- a/.github/workflows/dev_kyusda-client.yml
+++ b/.github/workflows/dev_kyusda-client.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x' # or 22.x if your React app requires it
+          node-version: '18.x' # Or whatever version your project uses
 
       - name: Install and build client
         working-directory: ./client
