--- a/.github/workflows/dev_kyusda-client.yml
+++ b/.github/workflows/dev_kyusda-client.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: react-client
-          path: client/build
+          path: client/dist # ✅ Changed from build to dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +62,4 @@ jobs:
         with:
           app-name: 'kyusda-client'
           slot-name: 'Production'
-          package: .
+          package: . # This is fine because the artifact contents will be extracted to root
