--- a/.github/workflows/dev_kyusda-sanity.yml
+++ b/.github/workflows/dev_kyusda-sanity.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - kyusda-sanity
+name: Build and deploy Sanity Studio to Azure Web App - kyusda-sanity
 
 on:
   push:
@@ -23,19 +23,20 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies, build, and test Sanity Studio
+        working-directory: ./backend_sanity
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./backend_sanity/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: sanity-app
           path: release.zip
 
   deploy:
@@ -52,11 +53,11 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: sanity-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
+        run: unzip release.zip -d ./backend_sanity
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -70,5 +71,4 @@ jobs:
         with:
           app-name: 'kyusda-sanity'
           slot-name: 'Production'
-          package: .
-          
+          package: ./backend_sanity
