--- a/.github/workflows/dev_kyusda-sanity.yml
+++ b/.github/workflows/dev_kyusda-sanity.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Sanity Studio to Azure Web App - kyusda-sanity
+name: Build and deploy Node.js app to Azure Web App - kyusda-sanity
 
 on:
   push:
@@ -23,20 +20,19 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: Install dependencies, build, and test Sanity Studio
-        working-directory: ./backend_sanity
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./backend_sanity/*
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: sanity-app
+          name: node-app
           path: release.zip
 
   deploy:
@@ -53,10 +49,10 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: sanity-app
+          name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip -d ./backend_sanity
+        run: unzip release.zip
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -71,5 +67,4 @@ jobs:
         with:
           app-name: 'kyusda-sanity'
           slot-name: 'Production'
-          package: .
-          verbose: true
+          package: ./backend_sanity
