--- a/.github/workflows/dev_kyusda-sanity.yml
+++ b/.github/workflows/dev_kyusda-sanity.yml
@@ -10,32 +10,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies and build
         working-directory: ./backend_sanity
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
         working-directory: ./backend_sanity
-        run: zip release.zip ./* -r
+        run: zip -r ../release.zip .
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: ./backend_sanity/release.zip
+          name: sanity-package
+          path: ./release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,16 +43,16 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: sanity-package
 
-      - name: Unzip artifact for deployment
+      - name: Unzip artifact (optional)
         run: unzip release.zip
 
       - name: Login to Azure
@@ -63,10 +62,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6E8689F74ABE47C0A1DB6EC885082DD7 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_34DA169816AD4B238D1C53F5CF0DFA0C }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'kyusda-sanity'
           slot-name: 'Production'
-          package: ./backend_sanity
+          package: release.zip
