--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Ensure a full repository checkout
+          repository: KYUSDA/church-system # Explicitly specify the repository
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
@@ -33,6 +34,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Ensure a full repository checkout
+          repository: KYUSDA/church-system # Explicitly specify the repository
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
