--- a/.github/workflows/main_kyusda.yml
+++ b/.github/workflows/main_kyusda.yml
@@ -37,8 +37,11 @@ jobs:
     needs: deploy-server
 
     steps:
-      - name: ⏬ Checkout code
-        uses: actions/checkout@v4
+      - name: ⏬ Download Client Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: client-build
+          path: ./client/build
 
       - name: 🔐 Azure Login
         uses: azure/login@v1
@@ -47,17 +50,11 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: 🔧 Build React App
-        run: |
-          cd client
-          npm ci
-          npm run build
-
       - name: 🚀 Deploy to Azure Web App (Client)
         uses: azure/webapps-deploy@v3
         with:
           app-name: kyusda-client
-          package: ./client
+          package: ./client/build
 
   deploy-sanity:
     name: Deploy Sanity to Production
@@ -65,8 +62,11 @@ jobs:
     needs: deploy-client
 
     steps:
-      - name: ⏬ Checkout code
-        uses: actions/checkout@v4
+      - name: ⏬ Download Sanity Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: sanity-build
+          path: ./backend_sanity/dist  # adjust if your output path differs
 
       - name: 🔐 Azure Login
         uses: azure/login@v1
@@ -76,8 +76,7 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: 🚀 Deploy Sanity Studio
-        run: |
-          cd sanity
-          npm ci
-          npm run build
-          # optional: sanity deploy (if you use sanity CLI + studio hosting)
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: kyusda-sanity
+          package: ./backend_sanity/dist
