updated UI for user dashboard

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,7 +8,11 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "jsx": "react-jsx", 
-    "allowJs": true           
+    "allowJs": true,
+      "baseUrl": ".",
+     "paths": {
+      "@/*": ["src/*"]
+    }           
   },
   "exclude": [
     "postcss.config.js",
