--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,17 @@
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^6.4.12",
     "@mui/x-data-grid": "^7.29.6",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.1.0",
@@ -20,6 +31,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "firebase": "^9.23.0",
     "formik": "^2.4.6",
@@ -34,6 +48,7 @@
     "react-big-calendar": "^1.19.3",
     "react-bootstrap": "^2.10.10",
     "react-confetti": "^6.4.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.3",
@@ -52,6 +67,8 @@
     "sonner": "^2.0.5",
     "styled-components": "^5.3.11",
     "swiper": "^11.2.8",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "timeago.js": "^4.0.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
