--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "@types/ejs": "^3.1.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
-    "axios": "^1.13.1",
+    "@types/xml2js": "^0.4.14",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.5.1",
@@ -38,7 +39,8 @@
     "nodemon": "^3.1.7",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.10.38",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
